test/conformance/chainsaw/exceptions/exclude-running-as-nonroot-user/pod-allowed-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-1
  namespace: default
spec:
  containers:
  - name: nginx1
    image: mirror.gcr.io/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      runAsUser: 1
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: nginx2
    image: mirror.gcr.io/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      runAsUser: 1000
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
