test/conformance/chainsaw/exceptions/exclude-running-as-nonroot-user/pod-allowed-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-2
  namespace: staging-ns
spec:
  containers:
  - name: nginx1
    image: mirror.gcr.io/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      runAsUser: 0
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: nginx2
    image: mirror.gcr.io/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      runAsUser: 10
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
