test/conformance/chainsaw/exceptions/exclude-running-as-nonroot-user/pod-rejected-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-2
  namespace: staging-ns
spec:
  containers:
  - name: busybox1
    image: mirror.gcr.io/library/busybox
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      runAsUser: 0
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
