test/conformance/chainsaw/exceptions/exclude-running-as-nonroot-user/pod-rejected-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-3
  namespace: default
spec:
  containers:
  - name: nginx1
    image: mirror.gcr.io/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      runAsUser: 0
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
