test/conformance/chainsaw/exceptions/exclude-running-as-nonroot-user/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa
spec:
  background: true
  rules:
  - name: restricted
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      validationFailureAction: Enforce
      podSecurity:
        level: restricted
        version: latest
